<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/textView" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                style="@style/ButtonStyle.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app1"
                android:onClick="showToast" />

            <Button
                style="@style/ButtonStyle.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app2"
                android:onClick="showToast"/>

            <Button
                style="@style/ButtonStyle.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app3"
                android:onClick="showToast"/>

            <Button
                style="@style/ButtonStyle.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app4"
                android:onClick="showToast"/>

            <Button
                style="@style/ButtonStyle.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app5"
                android:onClick="showToast"/>

            <Button
                style="@style/ButtonStyle.Purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_app6"
                android:onClick="showToast" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
